# qmmp-buzzic

./: README.md  buzzic.pro  buzzichelper.cpp  decoderbuzzicfactory.cpp  decoderbuzzicfactory.h
libbuzzic/: Buzzic2.cpp  Buzzic2.h  CMakeLists.txt  Instruments.cpp  Instruments.h  Operations.h
